--- a/index-pt.html
+++ b/index-pt.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liberdade</title>
-    <link rel="stylesheet" type="text/css" href="main6.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
   </head>
 
   <body>
