add base file structure

--- a/index-es.html
+++ b/index-es.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+<!--Esta sería la página principal-->
     <div class="contenedor">
       <p class="frase">
         "LA LIBERTAD DE LA HUMANIDAD NO MIENTE EN QUE PODEMOS HACER LO QUE QUEREMOS, SINO QUE NO TENEMOS QUE HACER LO QUE NO QUEREMOS."
