add base file structure

--- a/index-ar.html
+++ b/index-ar.html
@@ -22,7 +22,7 @@
         <li><span>عرب</span></li>
         <li><a href="index-zh-Hant.html">صينى</a></li>
         <li><a href="index-en.html">الإنجليزية</a></li>
-        <li><a href="index-es.html">الأسبانية</a></li>
+        <li><a href="index.html">الأسبانية</a></li>
         <li><a href="index-fr.html">فرنسي</a></li>
         <li><a href="index-it.html">إيطالي</a></li>
         <li><a href="index-ja.html">اليابانية</a></li>
