--- a/index-de.html
+++ b/index-de.html
@@ -22,7 +22,7 @@
         <li><a href="index-ar.html">Araber</a></li>
         <li><a href="index-zh-Hant.html">Chinesisch</a></li>
         <li><a href="index-en.html">Englisch</a></li>
-        <li><a href="index-es.html">Spanisch</a></li>
+        <li><a href="index.html">Spanisch</a></li>
         <li><a href="index-fr.html">Französisch</a></li>
         <li><a href="index-it.html">Italienisch</a></li>
         <li><a href="index-ja.html">Japanisch</a></li>
