--- a/index-fr.html
+++ b/index-fr.html
@@ -22,7 +22,7 @@
         <li><a href="index-ar.html">Arabe</a></li>
         <li><a href="index-zh-Hant.html">Chinois</a></li>
         <li><a href="index-en.html">Anglais</a></li>
-        <li><a href="index-es.html">Espagnol</a></li>
+        <li><a href="index.html">Espagnol</a></li>
         <li><span>Français</span></li>
         <li><a href="index-it.html">Italien</a></li>
         <li><a href="index-ja.html">Japonais</a></li>
