--- a/index-it.html
+++ b/index-it.html
@@ -22,7 +22,7 @@
         <li><a href="index-ar.html">Arabo</a></li>
         <li><a href="index-zh-Hant.html">Cinese</a></li>
         <li><a href="index-en.html">Inglese</a></li>
-        <li><a href="index-es.html">Spagnolo</a></li>
+        <li><a href="index.html">Spagnolo</a></li>
         <li><a href="index-fr.html">Francese</a></li>
         <li><span>Italiano</span></li>
         <li><a href="index-ja.html">Giapponese</a></li>
