--- a/index-zh-Hant.html
+++ b/index-zh-Hant.html
@@ -22,7 +22,7 @@
         <li><a href="index-ar.html">阿拉伯</a></li>
         <li><span>中文</span></li>
         <li><a href="index-en.html">英語</a></li>
-        <li><a href="index-es.html">西班牙文</a></li>
+        <li><a href="index.html">西班牙文</a></li>
         <li><a href="index-fr.html">法文</a></li>
         <li><a href="index-it.html">義大利文</a></li>
         <li><a href="index-ja.html">日本</a></li>
