--- a/index-en.html
+++ b/index-en.html
@@ -22,7 +22,7 @@
         <li><a href="index-ar.html">Arab</a></li>
         <li><a href="index-zh-Hant.html">Chinese</a></li>
         <li><span>English</span></li>
-        <li><a href="index-es.html">Spanish</a></li>
+        <li><a href="index.html">Spanish</a></li>
         <li><a href="index-fr.html">French</a></li>
         <li><a href="index-it.html">Italian</a></li>
         <li><a href="index-ja.html">Japanese</a></li>
