--- a/index-ja.html
+++ b/index-ja.html
@@ -22,7 +22,7 @@
         <li><a href="index-ar.html">アラブ</a></li>
         <li><a href="index-zh-Hant.html">中国語</a></li>
         <li><a href="index-en.html">英語</a></li>
-        <li><a href="index-es.html">スペイン語</a></li>
+        <li><a href="index.html">スペイン語</a></li>
         <li><a href="index-fr.html">フランス語</a></li>
         <li><a href="index-it.html">イタリアの</a></li>
         <li><span>日本人</span></li>
