--- a/index-pt.html
+++ b/index-pt.html
@@ -22,7 +22,7 @@
         <li><a href="index-ar.html">Árabe</a></li>
         <li><a href="index-zh-Hant.html">Chinês</a></li>
         <li><a href="index-en.html">Inglês</a></li>
-        <li><a href="index-es.html">Espanhol</a></li>
+        <li><a href="index.html">Espanhol</a></li>
         <li><a href="index-fr.html">Francês</a></li>
         <li><a href="index-it.html">Italiano</a></li>
         <li><a href="index-ja.html">Japonês</a></li>
