--- a/index-ru.html
+++ b/index-ru.html
@@ -22,7 +22,7 @@
         <li><a href="index-ar.html">Араб</a></li>
         <li><a href="index-zh-Hant.html">китайский язык</a></li>
         <li><a href="index-en.html">английский</a></li>
-        <li><a href="index-es.html">испанский язык</a></li>
+        <li><a href="index.html">испанский язык</a></li>
         <li><a href="index-fr.html">французкий язык</a></li>
         <li><a href="index-it.html">Итальянский</a></li>
         <li><a href="index-ja.html">Японский</a></li>
